--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ATS",
   "version": "0.1.0",
+  "homepage": "https://shivajiraje.github.io/ATS",
   "private": true,
   "dependencies": {
     "@fullcalendar/bootstrap": "^4.3.0",
@@ -18,9 +19,11 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.8.4",
     "file-saver": "^2.0.5",
+    "gh-pages": "^3.1.0",
     "jspdf": "^2.3.0",
     "jwt-decode": "^2.2.0",
     "metismenujs": "^1.1.0",
+    "moment": "^2.29.1",
     "multiselect-react-dropdown": "^1.6.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -59,6 +62,8 @@
     "xlsx": "^0.16.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
