--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "draftjs-to-html": "^0.8.4",
     "file-saver": "^2.0.5",
     "gh-pages": "^3.1.0",
+    "jquery": "^3.6.0",
     "jspdf": "^2.3.0",
     "jwt-decode": "^2.2.0",
     "metismenujs": "^1.1.0",
