--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "multiselect-react-dropdown": "^1.6.3",
     "node-sass": "^4.12.0",
+    "pdf-viewer-reactjs": "^2.2.3",
     "react": "^16.9.0",
     "react-albus": "^2.0.0",
     "react-apexcharts": "^1.3.3",
@@ -45,6 +46,7 @@
     "react-html-table-to-excel": "^2.0.0",
     "react-loadable": "^5.5.0",
     "react-multiselect-checkboxes": "^0.1.1",
+    "react-pdf": "^5.2.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
     "react-router-auth": "^1.0.1",
@@ -53,6 +55,7 @@
     "react-select": "^3.0.5",
     "react-sortablejs": "^1.5.1",
     "react-text-mask": "^5.4.3",
+    "react-view-pdf": "^0.1.2",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
